# traffic_counter_old_vs

./: .gitignore  CMakeLists.txt  Octopus on the Road.sln  README.md
Severine/: Button.h  Camera.cpp  Camera.h  CameraCalibrator.cpp  CameraCalibrator.h  ClickableButton.cpp  File.h  FileManager.cpp  FileManager.h  Homography.cpp  Homography.h  MainProcessing.h  Octopus.cpp  Octopus.h  README.md  Road.h  RoadDrawer.cpp  RoadDrawer.h  Settings.cpp  Settings.h  Severine.vcxproj  Severine.vcxproj.filters  VideoHub.cpp  VideoHub.h  main.cpp  odlCode.cpp
Strawberry Fields/: README.md  Strawberry Fields.vcxproj
Strawberry Fields/src/: main.cpp
Sunbeam Alpine/: Sunbeam Alpine.vcxproj  Sunbeam Alpine.vcxproj.filters
Sunbeam Alpine/include/: IOCallbacks.hpp  MaskExtractor.h
Sunbeam Alpine/include/blob/: BlobTracker.h  blob.h
Sunbeam Alpine/include/counter/: Counter.hpp
Sunbeam Alpine/include/helper/: Drawer.h  Line.hpp  (+4 more)
Sunbeam Alpine/src/: IOCallbacks.cpp  MaskExtractor.cpp
bgs-library/: Demo.cpp  PreProcessor.h  VideoCapture.h
bgs-library/package_bgs/: AdaptiveBackgroundLearning.cpp  AdaptiveSelectiveBackgroundLearning.cpp  AdaptiveSelectiveBackgroundLearning.h  FrameDifferenceBGS.cpp  IBGS.h  KNNBGS.cpp  MixtureOfGaussianV2BGS.cpp  StaticFrameDifferenceBGS.cpp  WeightedMovingMeanBGS.cpp  WeightedMovingVarianceBGS.cpp
bgs-library/vs2013/: bgslibrary.sln  bgslibrary.vcxproj  bgslibrary.vcxproj.filters  bgslibrary_demo.vcxproj  bgslibrary_demo2.vcxproj
config/: VehicleCounting.xml
config/bgs/: AdaptiveSelectiveBackgroundLearning.xml
scripts/: compress.py
(+42 files in other folders)
